tdf#103950 Undo does not revert bundled font size changes for table cells

Reviewed-on: https://gerrit.libreoffice.org/30902
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit 90646b4966c73637ddf592acd05b3091fb3fa41f)
Reviewed-on: https://gerrit.libreoffice.org/30956
(cherry picked from commit be2de90a0f32fb6054691cdba4ef533f236a1072)

Change-Id: Id41b7777739bfa93610f955e6c31f8bb979b8e2c